Created base structure.

--- a/src/less/BzFTMxc-theme.less
+++ b/src/less/BzFTMxc-theme.less
@@ -1,15 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-/**
- *  font-family: 'Raleway Dots', cursive;
- *  font-family: 'Raleway', sans-serif;
- **/
-
-@font: 'Raleway', 'Arial', sans-serif;
+@font: 'Lato', 'Arial', sans-serif;
 
 @background: #FFF;
 @text: #000;
 
-@timeline-background: @background;
-@timeline-text: @text;
-@timeline-line-color: lighten(@timeline-text, 20%);
-@timeline-point-color: @timeline-line-color;
