--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,14 +9,19 @@ html(lang="en")
             .page.fw
 
                 section#whoami.wrapper
-                    .greeting.fw.fl
-                        h3
-                            span.highlight.skew
-                                span.unskew Hello!
-                            span I am 
-                        h1 Abhay Arora .
-                    .role
-                        p Data Engineering &amp; Backend
+                    .l
+                        .greeting.fw.fl
+                            h3
+                                span.highlight.skew
+                                    span.unskew Hello!
+                                span I am 
+                            h1 Abhay Arora .
+                        .role
+                            p Data Engineering &amp; Backend
+                    .r
+                        .intro.fw.fl
+                            p My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live.
+
 
                 .split.fw.fl
                     
@@ -31,10 +36,58 @@ html(lang="en")
                     .split-right.fl
 
                         section#contact.section.wb
-                            h3.head Contact
+                            h3.head Experience
                             .content
-                                p Some content here
-                            .foot There's an issue
+                                .timeline
+                                    .row
+                                        .time
+                                            .t Oct'17 - Present
+                                            .td Data Engineer
+                                            .loc Bengaluru, IN
+                                        .event
+                                            .e Datalicious Pty. Ltd. (An Equifax company)
+                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            ul.tags
+                                                li ETL
+                                                li Media Attribution
+                                                li Data Pipelines
+                                    .row
+                                        .time
+                                            .t Oct'17 - Present
+                                            .td Data Engineer
+                                            .loc Bengaluru, IN
+                                        .event
+                                            .e Datalicious Pty. Ltd. (An Equifax company)
+                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            ul.tags
+                                                li ETL
+                                                li Media Attribution
+                                                li Data Pipelines
+                                    .row
+                                        .time
+                                            .t Oct'17 - Present
+                                            .td Data Engineer
+                                            .loc Bengaluru, IN
+                                        .event
+                                            .e Datalicious Pty. Ltd. (An Equifax company)
+                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            ul.tags
+                                                li ETL
+                                                li Media Attribution
+                                                li Data Pipelines
+                                    .row
+                                        .time
+                                            .t Oct'17 - Present
+                                            .td Data Engineer
+                                            .loc Bengaluru, IN
+                                        .event
+                                            .e Datalicious Pty. Ltd. (An Equifax company)
+                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            ul.tags
+                                                li ETL
+                                                li Media Attribution
+                                                li Data Pipelines
+                            .foot Total 3+ years of experience
 
                         section#contact.section.wb
                             h3.head Contact
