--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -20,7 +20,19 @@ html(lang="en")
                             p Data Engineering &amp; Backend
                     .r
                         .intro.fw.fl
+                            ul.journey
+                                li
+                                    .milestone Freelancing
+                                li
+                                    .milestone Startup
+                                li
+                                    .milestone Infosys
+                                li
+                                    .milestone Datalicious
+                                li
+                                    .milestone Your Team
                             p My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live.
+
 
 
                 .split.fw.fl
@@ -28,9 +40,64 @@ html(lang="en")
                     .split-left.fl
                         
                         section#contact.section
-                            h3.head Contact
+                            h3.head Inventory
                             .content
-                                p Some content here
+                                .sub-section
+                                    span.title Languages
+                                    ul.tags
+                                        li.pro Python
+                                        li.int Golang
+                                        li Scala
+                                        li.int Javascript
+                                        li C
+                                .sub-section
+                                    span.title Framework & Utility
+                                    ul.tags
+                                        li Flask
+                                        li Hadoop
+                                        li Spark
+                                        li Scrapy
+                                        li RabbitMQ
+                                        li Kafka
+                                        li Storm
+                                        li Angular.js
+                                        li D3.js
+                                        li React.js
+                                        li Tensorflow
+                                        li OpenCV
+                                        li Ethereum
+                                        li Hyperledger
+                                .sub-section
+                                    span.title Storage & Search
+                                    ul.tags
+                                        li MongoDB
+                                        li MySQL
+                                        li PostgreSQL
+                                        li HDFS
+                                        li Titan DB
+                                        li Elasticsearch
+                                        li SolR
+                                        li HBase
+                                        li Cassandra
+                                        li Neo4J
+                                .sub-section
+                                    span.title Workflow & Deployment
+                                    ul.tags
+                                        li Lambda
+                                        li Serverless
+                                        li Docker
+                                        li Openstack
+                                        li AWS
+                                        li Jenkins
+                                        li Git
+                                        li Slack
+                                        li Shell Scripting
+                                        li Taiga
+                                        li JIRA
+                                        li Kubernetes
+                                        li GitLab
+
+
                             .foot There's an issue
 
                     .split-right.fl
@@ -90,10 +157,29 @@ html(lang="en")
                             .foot Total 3+ years of experience
 
                         section#contact.section.wb
-                            h3.head Contact
+                            h3.head Education
                             .content
-                                p Some content here
-                            .foot There's an issue
+                                .timeline
+                                    .row
+                                        .time
+                                            .t 2013 - 2016
+                                            .td Bachelor of Technology
+                                            .loc Ludhiana, IN
+                                        .event
+                                            .e Punjab Technical University
+                                            .ec Guru Nanak Dev Engineering College
+                                            ul.tags
+                                                li Computer Science &amp; Engineering
+                                    .row
+                                        .time
+                                            .t 2013 - 2016
+                                            .td Diploma in Engineering
+                                            .loc Jalandhar, IN
+                                        .event
+                                            .e Punjab State Board Of Technical Education
+                                            .ec Mehr Chand Polytechnic College
+                                            ul.tags
+                                                li Computer Engineering
 
                         section#contact.section.wb
                             h3.head Contact
