--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -112,7 +112,11 @@ html, body{
 
     .intro {
 	text-align: right;
-	padding: 40px 0px;
+	padding: 20px 0px;
+
+	@media print{
+	    padding: 15px 0px;
+	}
 
 	p {
 	    padding-top: 20px;
@@ -131,6 +135,10 @@ html, body{
 	    font-weight: 300;
 	    color: #777;
 	    font-size: 14pt;
+
+	    @media print {
+		font-size: 12pt;
+	    }
 	}
     }
 }
@@ -298,7 +306,7 @@ ul.journey{
 	position: relative;
 	float: left;
 	width: 20%;
-	margin: 5px 0px;
+	margin: 15px 0px;
 	
 	&::before{
 	    position: absolute;
@@ -331,7 +339,7 @@ ul.journey{
 	    height: 0;
 	    border-top: 5px solid transparent;
 	    border-bottom: 5px solid transparent;
-	    border-left: 5px solid #333;
+	    border-left: 5px solid #777;
 	}
 	&:last-child::after{
 	    position: absolute;
@@ -348,23 +356,23 @@ ul.journey{
 	.milestone{
 	    float: left;
 	    width: 100%;
-	    padding-top: 12px;
+	    padding-top: 16px;
 	    text-align: center;
 	    font-size: 8pt;
-	    font-weight: 300;
-	    color: #999;
+	    color: #333;
+	    font-style: italic;
 
 	    &::after{
 		content: '';
 		position: absolute;
 		width: 5px;
 		height: 5px;
-		top: 0%;
+		top: 1px;
 		margin: 0px auto;
 		left: 0;
 		right: 0;
 		background: none;
-		border: solid 4px #000;
+		border: solid 4px #555;
 		border-radius: 50%;
 	    }
 	}
