--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,7 +17,7 @@ html(lang="en")
                                 span I am 
                             h1 Abhay Arora .
                         .role
-                            p Data Engineering &amp; Backend
+                            p Data Engineering, Backend &amp; DevOps
                     .r
                         .intro.fw.fl
                             ul.journey
@@ -39,7 +39,7 @@ html(lang="en")
                     
                     .split-left.fl
                         
-                        section#contact.section
+                        section#skills.section
                             h3.head Inventory
                             .content
                                 .sub-section
@@ -96,7 +96,30 @@ html(lang="en")
                                         li JIRA
                                         li Kubernetes
                                         li GitLab
+                        
+                        section#interests.section
+                            h3.head Areas of Interest
+                            .content
+                                .sub-section
+                                    span.title Languages
+                                    ul.tags
+                                        li.pro Python
+                                        li.int Golang
+                                        li Scala
+                                        li.int Javascript
+                                        li C
 
+                        section#contact.section
+                            h3.head Get in Touch
+                            .content
+                                .sub-section
+                                    span.title Languages
+                                    ul.tags
+                                        li.pro Python
+                                        li.int Golang
+                                        li Scala
+                                        li.int Javascript
+                                        li C
 
                             .foot There's an issue
 
